@startuml AutoGeneratorSchoolMessageGenerator

'基底クラスたち

'ロジックイベントクラス
class CalenderEvent{
    +readonly Date date
    +readonly int startTime
    +readonly int endTime
    +readonly int LessonCount

    +CalenderEvent(Date date,int startTime,int endTime)
}

'ロジック予約クラス
class Reservation{
    +readonly ReadOnlyCollection<CalenderEvent> StackEvents
    +readonly int LessonFee

    +Reservation(int lessonFee)
    -Reservation(Reservation oldReservation,ReadOnlyCollection<CalenderEvent> stackEvents)
    +Reservation AddEvent(CalenderEvent cEvent)
    +Reservation RemoveEvent(int index)
    +int AllLessonCount()
    +int TotalLessonFee()
}



'文章を生成するためのクラス
package Generator{
    '文章全体を生成するクラス
    class GuideGenerator{
        -readonly string guideFormat

        +GuideGenerator(string path)
        +string GenerateGuideText(DateItemGenerator dateItem,Reservation reservation)
    }

    'コマごとの項目を生成するクラス
    class DateItemGenerator{
        -readonly string eventFormat

        +DateItemGenerator(string path)
        +string GenerateDateItemText(CalenderEvent cEvent)
    }
}



Reservation "1" o-- "1..*" CalenderEvent

CalenderEvent <.. DateItemGenerator

Reservation <.. GuideGenerator

DateItemGenerator --o GuideGenerator

@enduml